<resources>
    <string name="app_name">BCA MobiIe</string>
    <string name="title_home">Home</string>
    <string name="title_akunsaya">Akun Saya</string>
    <string name="title_notifications">Notifikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright_content_wording_text">\n<b>BCA</b> All Rights Reserved.</string>
    <string name="copyright_content_wording_text2">To deactivate your BCA mobile account or for further information, please contact Halo BCA 1500888.\n\n</string>
    <string name="version_about"><b>Version</b></string>
    <string name="version_about2">4.2.4 (1222)</string>
    <string name="copyright_c_label_text">Copyright © 2022</string>
    <string name="terms_of_service_text"><u>Terms of service</u></string>
    <string name="about">About</string>
    <string name="nfc_request_active_text">Aktifkan fitur NFC pada\nponsel Anda.</string>
    <string name="title_mybca_pemrek_popup">Yuk, coba pengalaman baru buka rekening &amp; bertransaksi di aplikasi myBCA!</string>
    <string name="body_mybca_pemrek_popup_google">Dengan menekan tombol di bawah, Anda akan diarahkan ke Play Store</string>
    <string name="title_menu_1">Buka rekening dari handphone tanpa minimum setoran awal</string>
    <string name="title_menu_2">Langsung dapat fasilitas mobile dan internet banking</string>
    <string name="title_menu_3">Mudah setor dan tarik tunai dengan fitur Cardless di mobile banking</string>
    <string name="title_menu_4">Praktis bayar belanja dengan QR di merchant berlogo QRIS</string>
    <string name="text_newrek_nabung_kini">Nabung kini lebih mudah,\ncukup ikuti langkah berikut</string>
    <string name="siapkan_ktp">Siapkan KTP-el, NPWP (jika ada), lalu isi data diri</string>
    <string name="do_verif_data">Lakukan Video Call dengan Customer Service BCA untuk verifikasi data</string>
    <string name="do_active_internet"><![CDATA[Aktifkan mobile & internet banking untuk kemudahan transaksi]]></string>
    <string name="do_setoran">Lakukan setoran awal ke rekening baru</string>
    <string name="aktifkan_layanan_lokasi">Aktifkan Layanan Lokasi</string>
    <string name="do_active_gps">Untuk bisa menggunakan BCA mobile, mohon aktifkan Layanan Lokasi pada menu Pengaturan perangkat Anda</string>
    <string name="a_definisi">A. DEFINISI</string>
    <string name="term_and_condition">KETENTUAN m-BCA (MOBILE BANKING) \nPT BANK CENTRAL ASIA Tbk</string>
    <string name="bca_need_your_location">BCA Mobile Membutuhkan Akses \nLokasi Anda</string>
    <string name="bottom_text_ketentuan">Ketentuan m-BCA (Mobile Banking) PT Bank Central Asia Tbk ini telah disesuaikan dengan ketentuan peraturan perundang undangan termasuk ketentuan Peraturan Otoritas Jasa Keuangan</string>
    <string name="m_bca">m-BCA</string>
    <string name="masukkan_16_angka_no_kartu_atm_anda">Masukkan 16 angka No. Kartu ATM Anda:</string>
    <string name="send_sms">Kirimkan SMS yang tampil setelah menekan tombok OK.\nTransaksi ini dikenakan biaya SMS</string>
    <string name="notice_succes_input">Setiap kali Anda masuk ke menu m-BCA, Anda memerlukan Kode Akses terdiri dari 6 karakter huruf dan angka (minimal salah satunya huruf).</string>
    <string name="silahkan_menentukan_kode_akses_anda">Silahkan menentukan Kode Akses Anda :</string>
    <string name="confirmation_code_acces">Konfirmasi ulang kode Akses Anda:</string>
    <string name="incorret_code_acces">111 - Kode Akses baru yang Anda \nmasukkan tidak sesuai</string>
    <string name="transaksi">Transaksi</string>
    <string name="kode_akses">Kode Akses</string>
    <string name="input_6_alphanum">Input 6 alphanum</string>
    <string name="qris_navigation"></string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="andi_salam_syahputra">ANDI SALAM SYAHPUTRA</string>
    <string name="akun_saya">Akun Saya</string>

</resources>