<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_grey"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/icon_trx_grey"
        android:title="@string/transaksi"/>

    <item
        android:id="@+id/navigation_qris"
        android:title="@string/qris_navigation" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon_notif_grey"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_akunsaya"
        android:icon="@drawable/icon_akun_grey"
        android:title="@string/title_akunsaya" />

</menu>