<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebg"
    tools:context=".activity.SuccesInputActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTagAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensanssemibold"
        android:text="@string/m_bca"
        android:textColor="@color/blue_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:src="@drawable/graybg"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tvSuccesInputNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/opensansregular"
        android:textStyle="bold"
        android:textColor="@color/blue_text_color"
        android:text="@string/notice_succes_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/container2"
        app:layout_constraintTop_toTopOf="@+id/container2"/>

    <TextView
        android:id="@+id/tvNoticeCodeAcces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_menentukan_kode_akses_anda"
        android:fontFamily="@font/robotomedium"
        android:textColor="@color/blue_text_color"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/container2"
        app:layout_constraintTop_toBottomOf="@+id/tvSuccesInputNotice"/>

    <EditText
        android:id="@+id/inputCodeAcces"
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvNoticeCodeAcces"
        app:layout_constraintTop_toBottomOf="@id/tvNoticeCodeAcces" />

    <TextView
        android:id="@+id/tvNoticeCodeAcces2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_code_acces"
        android:fontFamily="@font/robotomedium"
        android:textColor="@color/blue_text_color"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inputCodeAcces"
        app:layout_constraintTop_toBottomOf="@id/inputCodeAcces"/>

    <EditText
        android:id="@+id/inputCodeAcces2"
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvNoticeCodeAcces2"
        app:layout_constraintTop_toBottomOf="@id/tvNoticeCodeAcces2" />

    <ImageButton
        android:id="@+id/btnOkAccesCode"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/inputCodeAcces2"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/clickokinputselector"/>

</androidx.constraintlayout.widget.ConstraintLayout>